# Open-Eggnogg

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  clean.sh  format-check.sh  format.sh  run-clang-format.py  run.sh
assets/maps/: sample.map
git_hooks/: pre-commit  pre-push
src/: Animated.cpp  AnimationPlayer.cpp  Character.cpp  Character.hpp  CharacterDisplayBehavior.cpp  CharacterPhysicsBehavior.cpp  Collidable.cpp  DisplayBehavior.cpp  Displayable.cpp  Displayable.hpp  Map.cpp  PhysicsBody.cpp  PhysicsBody.hpp  PhysicsEntity.cpp  PushableCollisionBehavior.cpp  Sword.cpp  TexturedSprite.cpp  Timer.cpp  Utils.cpp  World.cpp  main.cpp
src/include/: Animated.hpp  AnimationPlayer.hpp  Animations.hpp  Aninmation.hpp  Axis.hpp  Character.hpp  CharacterDisplayBehavior.hpp  CharacterPhysicsBehavior.hpp  Collidable.hpp  CollisionBehavior.hpp  DisplayBehavior.hpp  Displayable.hpp  ImmobileCollisionBehavior.hpp  Map.hpp  PhysicsBehavior.hpp  PhysicsBody.hpp  PhysicsEntity.hpp  PushableCollisionBehavior.hpp  Sword.hpp  TexturedSprite.hpp  Timer.hpp  Utils.hpp  World.hpp
src/shaders/: shaders
